[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lizardwizard"
version = "0.2.0"
description = "A package to ease the use of the Reptilian operating system at the University of Florida."
authors = ["Jacques Fleischer <jacquespfleischer@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["reptilian", "operating system", "university of florida"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
]
homepage = "https://github.com/jpfleischer/lizardwizard"
documentation = "https://github.com/jpfleischer/lizardwizard/blob/main/README.md"
repository = "https://github.com/jpfleischer/lizardwizard.git"

[tool.poetry.dependencies]
python = "^3.8"
pygetwindow = "^0.0.9"
cloudmesh-common = "^5.0.60"
docopt = "^0.6.2"
setuptools = "^69.1.0"
wheel = "^0.42.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
lw = "lizardwizard.console:main"

[project.scripts]
lw = "lizardwizard.console:main"